[package]
name = "ityfuzz_scan"
version = "0.1.0"
edition = "2021"

[dependencies]
ethers = { version = "2.0", features = ["ws"] }
rusqlite = { version = "0.31", features = ["bundled"] }
tokio = { version = "1.40", features = ["full"] }
teloxide = { version = "0.12", features = ["macros"] }
dotenv = "0.15"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
chrono = "0.4"
log = "0.4"
env_logger = "0.11"
ssh2 = "0.9"
backoff = { version = "0.4", features = ["futures", "tokio"] }
futures = "0.3"
lru = "0.12"
anyhow = "1.0"
lazy_static = "1.5"